templates/service-frontend.template.yml
---
kind: List
apiVersion: v1
items:
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    name: $SERVICE_NAME
  spec:
    replicas: 1
    revisionHistoryLimit: 5
    template:
      metadata:
        labels:
          app: $SERVICE_NAME
          tier: $TIER
          track: $CLUSTER_NAME
        name: $SERVICE_NAME
      spec:
        containers:
        - name: $SERVICE_NAME
          image: $DOCKER_REGISTRY_URL/$SERVICE_NAME:latest
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 80

- apiVersion: v1
  kind: Service
  metadata:
    labels:
      name: $SERVICE_NAME
      tier: $TIER
      track: $CLUSTER_NAME
    name: $SERVICE_NAME
  spec:
    type: NodePort
    ports:
    - port: 80
    selector:
      app: $SERVICE_NAME
